# winit-metal-repro

./: Cargo.toml
assets/: triangle.metal
src/: event_source.rs  main.rs  main_old.rs  render_loop.rs  swapchain.rs
